2/10/14 Custom: made log scale a tag shorter, so that there's some whitespace below graph indicators when they're dragged to bottom of screen
2/10/14 reduce y-margin on log scale from 40 to 30
2/10/14 make log scale taller in 'Solutions' screen
2/10/14 decouple heights of log and linear scales
2/10/14 fix display of H2O values on graph indicators, broken when I rewrote toScientificNotation on 1/29/14
2/10/14 make arrow always visible in linear graph, not just when some value is off-scale
2/10/14 add a break below arrow head in linear graph
2/10/14 slow down auto-fill animation (from 0.5 sec to 0.65 sec) because it seemed a little fast
2/10/14 fixed bug in scenery-phet.NumberPicker that was causing multiple timers to be created, giving the appearance of being stuck, most noticeable on iPad
2/10/14 apply 'Reset All' to the graphs
2/10/14 fill linear graph scale with gray RGB(230,230,230), which is roughly the fill at the the midpoint of the log scale
2/10/14 horizontally center major tick labels in log graph
2/10/14 make linear and log graph scales wider, so we can use a larger tick font in linear
2/10/14 swap positions of zoom in/out buttons, 'out' on left, 'in' on right
1/30/14 set RatioNode.visible=false before it has a chance to create molecules, to reduce startup time
1/29/14 replace RatioNodeWithCanvas with strategy pattern in RatioNode
1/29/14 make RatioNode implementation more similar to RatioNodeWithCanvas, ie with inner type MoleculesNode
1/29/14 use view coordinates to clip ratio feature to solution bounds
1/29/14 first attempt at a version of RatioNode that draws to Canvas using CanvasNode (not working, messes up the entire scene)
1/29/14 fix 'this' errors in RatioNode
1/29/14 rename toTimesTenString to toScientificNotation
1/29/14 rewrite toTimesTenString
1/29/14 fix: in Molecule counts, mantissa for H2O values is missing a decimal place (eg '4.0 x 10^25' should be '4.00 x 10^25')