@@ -1,6 +1,6 @@
 {
   "name": "ph-scale",
-  "version": "1.0.0-dev.9",
+  "version": "1.0.0-dev.10",
   "phetLibs": "ph-scale assert axon dot joist kite nitroglycerin phet-core phetcommon scenery scenery-phet sun sherpa",
   "preload": "../sherpa/jquery-2.0.3.js ../sherpa/lodash-2.4.1.js ../sherpa/has.js ../phetcommon/js/util/query-parameters.js ../phetcommon/js/util/check-assertions.js ../phetcommon/js/analytics/google-analytics.js",
   "license": "GPLv3",
